change hamburger menu styles and correct header z-index elements

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 - needs product page or some sort of thing
 - needs some products
 - needs original graphic logo
+- find fonts 
 - needs domain fwding from glassphemy or? */
 
 
@@ -29,6 +30,7 @@
         background-color: white;
         border: 1px solid black;
         border-left: none;
+        color: black;
     }
 
     #sidebar {
@@ -68,9 +70,10 @@ li {
     margin-left: -35px;
     list-style: none;
     width: 100%;
-    background-color: white;
+    background-color: black;
     border: 1px solid black;
     border-left: none;
+    color: white;
 }
 
 ul {
@@ -86,10 +89,11 @@ ul {
 
 #flame {
     position: absolute;
+    top: 0px;
     left: 75vw;
     width: 30vw;
     max-width: 70px;
-    z-index: 1;
+    z-index: 0;
 }
 
 #flame:hover {
@@ -113,6 +117,7 @@ ul {
     margin-right: 1vw;
     margin-left: 1vw;
     margin-top: 1vw;
+    z-index: 1;
 
 }
 
